105
  updated libraries:
  - Adafruit Python CharLCD Library
    * added support for backpack
  - Adafruit Python GPIO Library

104
- include SSD1306 library

103
  updated libraries:
  - Adafruit Python ADS1x15 Library
  - Adafruit Python ADXL345 Library
  - Adafruit Python BMP Library
  - Adafruit Python CharLCD Library
  - Adafruit Python DHT Library
  - Adafruit Python GPIO Library
  - Python library for controlling LED backpack displays.
  - Adafruit Python LSM303 Library
  - Adafruit Python MCP3008 Library
  - Adafruit Python MCP4725 Library
  - Adafruit Python PCA9685 Library
  - Pure python access to Linux IO including I2C and SPI.
  - Python library for the SI1145
  - Adafruit Python TCS34725 Library
  - Adafruit Python VCNL40xx Library
  - Adafruit Python WS2801 Library

101
- include SI1145 library
- compile DHT driver

100
- Initial Release