@@ -17,8 +17,8 @@
 ################################################################################
 
 PKG_NAME="Adafruit_Python_DHT"
-PKG_VERSION="da8cddf"
-PKG_SHA256="ad5a0ca0d8c99caedd9db5c1015fc40635c5441e3b923a2dfecc27933622af8d"
+PKG_VERSION="a609d7d"
+PKG_SHA256="820025c19ce9f3e59fa6d389c860eb567d5a665a08ec45e237839ca214b97615"
 PKG_ARCH="any"
 PKG_LICENSE="MIT"
 PKG_SITE="https://github.com/adafruit/${PKG_NAME}"
