@@ -1,3 +1,9 @@
+106
+  updated libraries:
+  - Adafruit Python DHT Library
+  - Adafruit Python GPIO Library
+  - Python library for controlling LED backpack displays.
+
 105
   updated libraries:
   - Adafruit Python CharLCD Library
